# pty-mcp

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
scripts/: sudo_smoke.py
src/: askpass.rs  attach.rs  exec.rs  hook.rs  keys.rs  main.rs  screen.rs  server.rs  session.rs  sudo.rs  userenv.rs
